# 3DGS-to-PC

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  GS2PC.vcxproj  GS2PC.vcxproj.filters
cpp_native/: CMakeLists.txt  CMakePresets.json  README.md  remember.md  run_set_cuda_forward_test.cmd
cpp_native/build_cuda_auto/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cpp_native/build_cuda_auto/gaussian-pointcloud-rasterization/: cmake_install.cmake
cpp_native/include/gs2pc/: camera.h  config.h  converter.h  exporter.h  io.h  raster.h  types.h
cpp_native/src/camera/: camera_loader.cpp
cpp_native/src/cli/: cli.cpp  main.cpp
cpp_native/src/converter/: converter.cpp
cpp_native/src/exporter/: exporter.cpp
cpp_native/src/io/: io.cpp
cpp_native/src/raster/: raster.cpp
gaussian-pointcloud-rasterization/: CMakeLists.txt
gaussian-pointcloud-rasterization/cuda_rasterizer/: auxiliary.h  forward.cu  rasterizer.h  rasterizer_impl.cu
x64/Debug/: GS2PC.exe.recipe
x64/Debug/GS2PC.tlog/: GS2PC.lastbuildstate
